<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PickOne</string>
    <string name="hello_world">"This app will help you decide what you want to do when you have a few options that are all awesome but just can't decide on how to pick one. Hence the name.... PickOne."</string>
    <string name="welcome">Welcome to PickOne</string>
    <string name="action_settings">Settings</string>
    <string name="thinking_description">Man Thinking</string>
    <string name="button_text">Start</string>
    <string name="title_activity_choose_options">ChooseOptions</string>
    <string name="options_hint">"If you are trying to decide what to do, just add whatever it is you are choosing between to the list and prepare to let me choose for you :)"</string>
    <string name="title_activity_see_list">SeeList</string>
    <string name="choosing_screen_edittext_hint">Please enter an item here...</string>
    <string name="addToListButtonText">Add To List</string>
    <string name="viewListButtonText">View List</string>
    <string name="seeListPickButton">PickOne</string>
    <string name="title_activity_results">Results</string>

</resources>
