<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.porf.pickone.ChooseOptions"
    android:background="@drawable/blackwood"
    android:gravity="center_horizontal">

    <TextView
        android:text="@string/options_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/textView3"
        android:gravity="center"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:id="@+id/enterItem"
        android:layout_marginTop="42dp"
        android:inputType="text"
        android:hint="@string/choosing_screen_edittext_hint"
        android:textColor="#000000"
        android:background="#ffffff"
        android:width="380dp"
        android:height="80dp"
        android:imeOptions="actionDone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:gravity="center">


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/addToListButtonText"
            android:id="@+id/buttonAdd"
            android:layout_marginRight="10dp"
            android:background="#ffffff"
            android:onClick="addToList" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/viewListButtonText"
            android:id="@+id/buttonListView"
            android:background="#ffffff"
            android:onClick="seeList"/>

        </LinearLayout>



</LinearLayout>









